# Vision-Based-Autonomous-Racing-Course-Movement-in-Real-Time

./: .gitignore  BLE_CONNECTION_DETAILS.md  CAR_DETECTION_DETAILS.md  CENTROID_ANALYSIS_RESULTS.md  CMakeLists.txt  COMPLETION_REPORT.md  CONTROL_DETAILS.md  CPP_BUILD_COMPLETE.md  CPP_BUILD_RESOLUTION_INDEX.md  CPP_BUILD_SUCCESS.md  CPP_MASTER_COPY_FEATURE_MATRIX.md  CPP_MASTER_COPY_QUICKSTART.md  CPP_MASTER_COPY_VALIDATION.md  CPP_PYTHON_ARCHITECTURE_MATCH.md  CPP_QUICK_START.md  HOW_TO_RUN.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_STATUS.md  MANIFEST.md  PATH_CENTER_DETECTION_DETAILS.md  PROJECT_REORGANIZATION_SUMMARY.md  QUICKSTART_AUTONOMOUS.md  QUICK_REFERENCE.md  RASPBERRY_PI_4_OPTIMIZATION.md  RASPBERRY_PI_DEPLOYMENT.md  RBP4_HEADLESS_IMPLEMENTATION.md  RBP4_THREE_COMMANDS.md  README.md  RPI4_QUICK_START.md  RPI_SETUP.md  START.sh  STEERING_STABILITY_FIX.md  SYSTEM_UPDATE_SUMMARY.md  TIMING_MEASUREMENTS.md  TOTAL_WORKING_FLOW.md  WHY_CONSOLIDATION.md  build_rpi4.sh  compare_implementations.sh  requirements.txt  rpi_setup.sh  (+8 more)
CPP_Complete/: BLE_IMPLEMENTATION_UPDATE.md  CMakeLists.txt  CODE_CHANGES_REFERENCE.md  COMPLETE_SOLUTION.md  IMPLEMENTATION_COMPLETE_FINAL.md  INSTALL_SIMPLEBLE.md  README.md  REALTIME_DETECTION_GUIDE.md  RUN_AUTONOMOUS_CONTROL.md  SENIOR_IMPLEMENTATION.md  build.sh  run_autonomous.sh
CPP_Complete/HelpFiles/OLD_CPP_Project/: CMakeLists.txt
CPP_Complete/HelpFiles/OLD_CPP_Project/docs/: IMPLEMENTATION_SUMMARY.md
CPP_Complete/HelpFiles/OLD_CPP_Project/old_project/Tracking/: testgoturn.py
CPP_Complete/HelpFiles/OLD_CPP_Project/src/: object_tracker.cpp
CPP_Complete/HelpFiles/Python_project/: IMPLEMENTATION_SUMMARY.txt  LIVE_BOUNDARY_DETECTION.md  QUICKSTART.sh  QUICK_REFERENCE_TWO_STAGE.md  QUICK_START.md  ROAD_DETECTION_FIX.md  pyproject.toml  setup_and_run.sh
CPP_Complete/HelpFiles/Python_project/CPP_Project/: FIX_COMPILATION_ERRORS.md  fix_opencv_errors.py
CPP_Complete/HelpFiles/Python_project/CPP_Project/docs/: SCAN_AND_CONNECT_GUIDE.md
CPP_Complete/HelpFiles/Python_project/CPP_Project/include/: config_manager.h
CPP_Complete/HelpFiles/Python_project/CPP_Project/old_project/Python/: BTLEHandler.py  boundaryDetection.py
CPP_Complete/HelpFiles/Python_project/CPP_Project/old_project/Vidgear example stream/: server.py
CPP_Complete/HelpFiles/Python_project/config/: default.json
CPP_Complete/HelpFiles/Python_project/rc_autonomy/: ui.py
CPP_Complete/HelpFiles/Python_project/tests/: test_circular_detection.py
CPP_Complete/HelpFiles/allinone/: CMakeLists.txt  centerline.csv  controller.cpp
CPP_Complete/HelpFiles/allinone/build_msvc/: centerline.csv  compile_commands.json
CPP_Complete/config/: config.json
CPP_Complete/docs/: API_REFERENCE.md  BUILD_INSTRUCTIONS.md  IMPLEMENTATION_GUIDE.md
CPP_Complete/docs copy/: PRD.md
CPP_Complete/include/: ble_handler.hpp  boundary_detection.hpp  car_detector.hpp  commands.hpp  control_orchestrator.hpp
CPP_Complete/src/: ble_handler.cpp  boundary_detection.cpp  boundary_detection_old.cpp  camera_capture.cpp  car_detector.cpp  commands.cpp  config_manager.cpp  control_orchestrator.cpp  main.cpp
CPP_Project/config/: config.json
CPP_Project/docs/: RASPBERRY_PI_KALI_SETUP.md
CPP_Project/src/: config_manager.cpp  control_orchestrator.cpp
FINAL/: CMakeLists.txt  PERFORMANCE_REPORT.md  README.md  benchmark_frames_20260323_154338.csv  benchmark_summary_20260323_154338.txt  build.sh  centerline.csv  workprocess.md
FINAL/include/: ble_client.hpp  car_detector.hpp  controller.hpp  imm_tracker.hpp  path_detector.hpp  types.hpp
FINAL/src/: benchmark.cpp  ble_client.cpp  car_detector.cpp  controller.cpp  imm_tracker.cpp  main.cpp  path_detector.cpp
HelpFiles/IOT_ACCS/: README_CPP.md  autonomous_centerline_controller_pure_pursuit_delay_fixed.cpp  autonomous_centerline_controller_pure_pursuit_delay_fixed_cpp  build.sh  centerline.csv
HelpFiles/OLD_CPP_Project/: Makefile.test
HelpFiles/OLD_IOT_ACCS/: README_CPP.md  autonomous_centerline_controller_pure_pursuit_delay_fixed.py  centerline.csv  help_file
HelpFiles/OLD_Python_project/: EDGE_DETECTION_GUIDE.md  LIVE_DETECTION_QUICKREF.sh  README_ROAD_DETECTION.md  TWO_STAGE_DETECTION.md  diagnose_camera.py  run_autonomy.py  test_live_boundaries.py  validate_system.py
HelpFiles/Python_project/: ARCHITECTURE_DIAGRAMS.md  CIRCULAR_TRACK_FIX.md  (+6 more)
MAC/: CMakeLists.txt  README_CPP.md  centerline.csv  main.mm
OLD_CPP_Project/: test_ble_cpp.cpp
Python_project/: CONSOLIDATED_ARCHITECTURE.md  PROFESSIONAL_IMPLEMENTATION_COMPLETE.md  README.md  README_LIVE_DETECTION.md  ROAD_DETECTION_QUICKSTART.md  ROAD_DETECTION_TUNING.md  WHITE_MARKER_OPTIMIZATION.md  diagnose_road_detection.py  lane_test.py  test_live_boundaries.sh
RBP4/: CMakeLists.txt  COMPARISON.md  CPU_OPTIMIZATION_GUIDE.txt  DEPLOYMENT_GUIDE.md  LOW_REGULATION_QUICK_START.md  LOW_REGULATION_README.md  LOW_REGULATION_SUMMARY.md  README.md  README_CPP.md  autonomous_centerline_controller_low_regulation.cpp  autonomous_centerline_controller_pure_pursuit_delay_fixed.cpp  build.sh  build_rbp4.sh  headless_fix.patch  main.cpp  run_rbp4.sh  run_rbp4_headless.sh  run_rbp4_headless_sim.sh  run_rbp4_sim.sh
RBP4/config/: config_rbp4_gui.json  config_rbp4_headless.json  config_rbp4_ultra_low.json
RBP4/include/: ble_handler.hpp  commands.hpp  config_manager.hpp
RBP4/src/: ble_handler.cpp  boundary_detection.cpp  camera_capture.cpp  control_orchestrator.cpp  main.cpp  object_tracker.cpp
config/: config.json  config_headless.json  config_rpi4.json  default.json
docs/: PRD.md  main.tex  sample.bib
include/: boundary_detection.hpp  camera_capture.hpp  control_orchestrator.hpp  object_tracker.hpp
rc_autonomy/: ble.py  boundary.py  camera.py  config.py  live_boundary_detector.py  main.py  orchestrator.py  tracking.py  ui.py
src/: ble_handler.cpp  ble_handler_old.cpp  boundary_detection.cpp  camera_capture.cpp  commands.cpp  control_orchestrator.cpp  main.cpp
tests/: detect_circular_track.py  extract_clean_boundaries.py  real_time_path_detection.py  test_complete_demo.py
(+52 files in other folders)
