[project]
name = "rc-autonomy"
version = "0.1.0"
description = "Vision-based autonomous RC car control (Python)"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "numpy>=1.23",
  "simplepyble>=0.6.2",
  "opencv-python>=4.8.0"
]

[project.scripts]
rc-autonomy = "rc_autonomy.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
